<resources>
    <string name="app_name">Weather Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="pressure">Pressure:</string>
    <string name="clouds">Clouds:</string>
    <string name="_7_day_forecast">7-Day forecast</string>
    <string name="n_a">N/A</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="settings">Settings</string>
    <string name="units">Units:</string>
    <string name="language">Language:</string>
    <string name="deleteFav">Are you sure you want to delete this location from favorite?</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="meterPerSec">m/s</string>
    <string name="milePerHr">mile/hr</string>
    <string name="cel">C</string>
    <string name="fahr">F</string>
    <string name="kelv">K</string>
    <string name="addAlarm">Add alarm</string>
    <string name="clear_sky">clear sky</string>
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="shower_rain">shower rain</string>
    <string name="rain">rain</string>
    <string name="ok">ok</string>
    <string name="noInternet">The internet connection is disabled</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="snow">snow</string>
    <string name="mist">mist</string>
    <string name="choose_alert">choose alert</string>
    <string name="notification">Notification</string>
    <string name="events">Event:</string>
    <string name="alert">Alert: </string>
    <string name="validTime">These date and time are not valid</string>
    <string name="networkAlertIssue">Ooops!!\nThe application Weather Forecast needs to be connected
                to the internet to be able to check the event you want.\n
        May you switch on the internet connection and restart the application?</string>
    <string name="_24_hour_forecast">24-Hour forecast</string>
    <string name="add">ADD</string>
    <string name="warning">warning</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="permReq">Permission request</string>
    <string name="enableLocation">could you enable your location?</string>
    <string name="networkError">Network Error</string>
    <string name="noPermDialog">without this permission the app will not be able to work properly!\n
                        Would you like to give us the permission?</string>
    <string name="noLocationToast">unfortunately the home weather and the aleret will not work probably</string>
    <string name="deleteAlarmDialog">Are you sure you want to delete this alarm?</string>
    <string name="addAlarmToast">set your home location first please</string>
    <string-array name="unitsArr">
        <item>Choose unit</item>
        <item>Standard</item>
        <item>Imperial</item>
        <item>Metric</item>
    </string-array>
    <string-array name="LocaleArr">
        <item>Choose Language</item>
        <item>Arabic</item>
        <item>English</item>
    </string-array>
    <string-array name="alertsArr">
        <item>Alarm</item>
        <item>Notification</item>
    </string-array>
    <string-array name="eventsArr">
        <item>clear sky</item>
        <item>few clouds</item>
        <item>scattered clouds</item>
        <item>broken clouds</item>
        <item>shower rain</item>
        <item>rain</item>
        <item>thunderstorm</item>
        <item>snow</item>
        <item>mist</item>
    </string-array>
</resources>