<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherforecast.view.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weatherforecast.view.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/alarmFragment"
        android:name="com.example.weatherforecast.view.AlarmFragment"
        android:label="@string/alarm"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/daysFragment"
        android:name="com.example.weatherforecast.view.DaysFragment"
        android:label="@string/_7_day_forecast"
        tools:layout="@layout/fragment_days">
        <argument
            android:name="weather"
            app:argType="com.example.weatherforecast.model.Weather" />
    </fragment>
    <action
        android:id="@+id/action_global_daysFragment"
        app:destination="@id/daysFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weatherforecast.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment"
        app:enterAnim="@anim/slide_in_top"
        app:exitAnim="@anim/slide_out_bottom"
        app:popEnterAnim="@anim/slide_in_bottom"
        app:popExitAnim="@anim/slide_out_top" />
</navigation>