<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/homeCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#00000000">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="350dp"
                    android:layout_height="350dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tempTV"
                    style="@style/textViewStyle"
                    android:text="@string/n_a"
                    android:textSize="50sp"
                    app:layout_constraintBottom_toBottomOf="@id/weatherIcon" />

                <TextView
                    android:id="@+id/tempUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="K"
                    android:textColor="@color/white"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/tempTV"
                    app:layout_constraintTop_toTopOf="@id/tempTV" />

                <TextView
                    android:id="@+id/timezoneTV"
                    style="@style/textViewStyle"
                    android:text="@string/n_a"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/weatherIcon" />

                <TextView
                    android:id="@+id/descriptionTV"
                    style="@style/textViewStyle"
                    android:text="@string/n_a"
                    android:textSize="20sp"
                    app:layout_constraintTop_toBottomOf="@id/timezoneTV" />

                <TextView
                    android:id="@+id/timeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="23:43"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="2/26/2021"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/humidityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionTV" />

                <TextView
                    android:id="@+id/humidityTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/n_a"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/humidityLabel"
                    app:layout_constraintTop_toTopOf="@id/humidityLabel" />

                <TextView
                    android:id="@+id/humidityUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="%"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/humidityTV"
                    app:layout_constraintTop_toTopOf="@id/humidityTV" />

                <TextView
                    android:id="@+id/windSpeedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/humidityLabel" />

                <TextView
                    android:id="@+id/windSpeedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/n_a"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/windSpeedLabel"
                    app:layout_constraintTop_toTopOf="@id/windSpeedLabel" />

                <TextView
                    android:id="@+id/windSpeedUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="m/s"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/windSpeedTV"
                    app:layout_constraintTop_toTopOf="@id/windSpeedTV" />

                <TextView
                    android:id="@+id/pressureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/pressureTV"
                    app:layout_constraintTop_toTopOf="@id/humidityLabel" />

                <TextView
                    android:id="@+id/pressureTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/pressureUnit"
                    app:layout_constraintTop_toTopOf="@id/humidityLabel" />

                <TextView
                    android:id="@+id/pressureUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="hPa"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/humidityTV" />

                <TextView
                    android:id="@+id/cloudLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/clouds"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/cloudTV"
                    app:layout_constraintTop_toTopOf="@id/windSpeedTV" />

                <TextView
                    android:id="@+id/cloudTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/n_a"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/cloudsUnit"
                    app:layout_constraintTop_toTopOf="@id/cloudLabel" />

                <TextView
                    android:id="@+id/cloudsUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="%"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/windSpeedTV" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/hoursForecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_btn"
                    android:backgroundTint="@color/night"
                    android:padding="10dp"
                    android:text="@string/_24_hour_forecast"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cloudsUnit" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/weekForecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_btn"
                    android:backgroundTint="@color/night"
                    android:padding="10dp"
                    android:text="@string/_7_day_forecast"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/hoursForecast" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


</FrameLayout>